// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangePassword renders as expected 1`] = `
<div>
  <div
    class="amplify-flex amplify-accountsettings-deleteuser"
    style="flex-direction: column;"
  >
    <button
      class="amplify-button amplify-field-group__control"
      data-fullwidth="false"
      type="button"
    >
      Delete Account
    </button>
  </div>
</div>
`;

exports[`ChangePassword renders as expected with components overrides 1`] = `
<div>
  <div
    class="amplify-flex amplify-accountsettings-deleteuser"
    style="flex-direction: column;"
  >
    <button
      class="amplify-button amplify-field-group__control"
      data-fullwidth="false"
      type="button"
    >
      Custom Delete Button
    </button>
  </div>
</div>
`;
